--- a/lessons/02-layers.Rmd
+++ b/lessons/02-layers.Rmd
@@ -64,9 +64,9 @@ sapply(mpg,class)
 
 Among the variables in `mpg` are:
 
-1.  `displ`: A car's engine size, in liters. A numerical variable.
+1. `displ`: A car's engine size, in liters. A numerical variable.
 
-2.  `hwy`: A car's fuel efficiency on the highway, in miles per gallon
+2. `hwy`: A car's fuel efficiency on the highway, in miles per gallon
     (mpg). A car with a low fuel efficiency consumes more fuel than a
     car with a high fuel efficiency when they travel the same distance.
     A numerical variable.
@@ -261,7 +261,7 @@ geoms.
 
 ### 2.2.1 Exercises {.unnumbered}
 
-1.  Create a scatterplot of `hwy` vs. `displ` where the points are pink
+1. Create a scatterplot of `hwy` vs. `displ` where the points are pink
     filled in triangles.
 
 **Ans-2.2.1.1:**
@@ -270,7 +270,7 @@ geoms.
 ggplot(mpg,aes(x = hwy, y = displ)) + geom_point(shape = 17, color = "pink")
 ```
 
-2.  Why did the following code not result in a plot with blue points?
+2. Why did the following code not result in a plot with blue points?
 
 ```{r}
 #| fig-show: hide
@@ -288,8 +288,7 @@ ggplot(mpg) +
 ```{r Ans-2.2.1.2}
 ```
 
-3.  What does the `stroke` aesthetic do? What shapes does it work with?
-    (Hint: use `?geom_point`)
+3. What does the `stroke` aesthetic do? What shapes does it work with? (Hint: use `?geom_point`)
 
 **Ans-2.2.1.3:**
 
@@ -297,9 +296,7 @@ ggplot(mpg) +
 
 ```
 
-4.  What happens if you map an aesthetic to something other than a
-    variable name, like `aes(color = displ < 5)`? Try it by adding color
-    to the following plot:
+4. What happens if you map an aesthetic to something other than a variable name, like `aes(color = displ < 5)`? Try it by adding color to the following plot:
 
 ```{r}
 #| fig-show: hide
@@ -523,7 +520,8 @@ about any single geom, use the help (e.g., `?geom_smooth`).
 
 ### 2.3.1 Exercises {.unnumbered}
 
-1.a. What geom would you use to draw a line chart? A boxplot? A
+1.
+    a) What geom would you use to draw a line chart? A boxplot? A
 histogram? An area chart?
 
 **Ans-2.3.1.1a**
@@ -532,9 +530,8 @@ histogram? An area chart?
 
 ```
 
-b.  Use the following ggplot to create 4 plots, `geom_line()`,
-    `geom_boxplot()`, `geom_point()` and `geom_area()`. Include a title
-    specifying the geometry for each.
+1. 
+    b) Use the following ggplot to create 4 plots, `geom_line()`, `geom_boxplot()`, `geom_point()` and `geom_area()`. Include a title specifying the geometry for each.
 
 ```{r}
 df <- data.frame(
@@ -552,7 +549,7 @@ p <- ggplot(df, aes(x, y, label = label))
 
 ```
 
-2.  Earlier in this chapter we used `show.legend` without explaining it:
+2. Earlier in this chapter we used `show.legend` without explaining it:
 
 ```{r}
 #| fig-show: hide
@@ -569,16 +566,11 @@ Try it.
 
 ```
 
-3.  What does the `se` argument to `geom_smooth()` do?
+3. What does the `se` argument to `geom_smooth()` do?
 
 **Ans-2.3.1.2:**
 
-4.  Recreate the R code necessary to generate and save the following
-    graph \@ref(fig:6-plots) and arrange them in a figure with 2
-    columns. Note that wherever a categorical variable is used in the
-    plot, it's `drv`. Use the mathematical notation in one, and the
-    function from `patchwork`, `plot_layout` in another for laying out
-    the plot.
+4. Recreate the R code necessary to generate and save the following graph \@ref(fig:6-plots) and arrange them in a figure with 2 columns. Note that wherever a categorical variable is used in the plot, it's `drv`. Use the mathematical notation in one, and the function from `patchwork`, `plot_layout` in another for laying out the plot.
 
 ```{r}
 #| label: 6-plots
@@ -715,7 +707,7 @@ ggplot(mpg, aes(x = displ, y = hwy)) +
 
 ### 2.4.1 Exercises {.unnumbered}
 
-1.  What happens if you facet on a continuous variable? Try it on the.
+1. What happens if you facet on a continuous variable? Try it on the.
     plot below and facet on `hwy`.
 
 ```{r}
@@ -731,8 +723,7 @@ ggplot(mpg, aes(x = drv, y = cyl)) + geom_point()
 
 ```
 
-2.  Run the following code and facet on drv vs cyl. What do the empty
-    cells mean?
+2. Run the following code and facet on drv vs cyl. What do the empty cells mean?
 
 ```{r}
 #| fig-show: hide
@@ -766,7 +757,7 @@ ggplot(mpg) +
 
 ```
 
-4.  Take the first faceted plot in this section:
+4. Take the first faceted plot in this section:
 
 ```{r}
 #| fig-show: hide
@@ -776,7 +767,8 @@ ggplot(mpg) +
   facet_wrap( ~ class, nrow = 2)
 ```
 
-a.  What are the advantages to using faceting instead of the color
+4.
+    a) What are the advantages to using faceting instead of the color
     aesthetic? What are the disadvantages?
 
 **Ans-2.4.1.4a:**
@@ -785,7 +777,8 @@ a.  What are the advantages to using faceting instead of the color
 
 ```
 
-b.  What if you were interested in a specific class, e.g. compact cars?
+4. 
+    b) What if you were interested in a specific class, e.g. compact cars?
     How would you highlight that group using only an additional layer
     added to the plot below?
 
@@ -801,18 +794,14 @@ ggplot(mpg, aes(x = displ, y = hwy)) + geom_point(color = "pink")
 
 ```
 
-5.  Read `?facet_wrap`. What does `nrow` do? What does `ncol` do? What
-    other options control the layout of the individual panels? Why
-    doesn't `facet_grid()` have `nrow` and `ncol` arguments?
+5. Read `?facet_wrap`. What does `nrow` do? What does `ncol` do? What other options control the layout of the individual panels? Why doesn't `facet_grid()` have `nrow` and `ncol` arguments?
 
 **Ans-2.4.1.5:**
 
 ```{r Ans-2.4.1.5}
 ```
 
-6.  Which of the following plots makes it easier to compare engine size
-    (`displ`) across cars with different drive trains? What does this
-    say about when to place a faceting variable across rows or columns?
+6. Which of the following plots makes it easier to compare engine size (`displ`) across cars with different drive trains? What does this say about when to place a faceting variable across rows or columns?
 
 ```{r}
 #| fig-show: hide
@@ -828,8 +817,7 @@ ggplot(mpg, aes(x = displ)) +
 
 **Ans-2.4.1.6:**
 
-7.  Recreate the following plot using `facet_wrap()` instead of
-    `facet_grid()`. How do the positions of the facet labels change?
+7. Recreate the following plot using `facet_wrap()` instead of `facet_grid()`. How do the positions of the facet labels change?
 
 ```{r}
 #| fig-width: 6
@@ -846,8 +834,7 @@ ggplot(mpg) +
 
 ```
 
-8.  Modify the facet label in the following plot so that it has a
-    background color of `navy` with a `red` outline and `white` text.
+8. Modify the facet label in the following plot so that it has a background color of `navy` with a `red` outline and `white` text.
 
 ```{r}
 #| fig-show: hide
@@ -936,7 +923,7 @@ means that you can typically use geoms without worrying about the
 underlying statistical transformation. However, there are three reasons
 why you might need to use a stat explicitly:
 
-1.  You might want to override the default stat. In the code below, we
+1. You might want to override the default stat. In the code below, we
     change the stat of `geom_bar()` from count (the default) to
     identity.This lets us map the height of the bars to the raw values
     of a y variable.
@@ -944,7 +931,7 @@ why you might need to use a stat explicitly:
 ```{r}
 #| fig-width: 6
 #| fig-alt: |
-#| Bar chart of number of each cut of diamond. There are roughly 1500 Fair, 5000 Good, 12000 Very Good, 14000 Premium, and 22000 Ideal cut diamonds.
+#|   Bar chart of number of each cut of diamond. There are roughly 1500 Fair, 5000 Good, 12000 Very Good, 14000 Premium, and 22000 Ideal cut diamonds.
 
 diamonds %>%
   count(cut) %>%
@@ -952,7 +939,7 @@ diamonds %>%
   geom_bar(stat = "identity")
 ```
 
-2.  You might want to override the default mapping from transformed
+2. You might want to override the default mapping from transformed
     variables to aesthetics. For example, you might want to display a
     bar chart of proportions, rather than counts:
 
@@ -999,7 +986,7 @@ function, so you can get help in the usual way, e.g., `?stat_bin`.
 
 ### 2.5.1 Exercises {.unnumbered}
 
-1.  What is the default geom associated with `stat_summary()`? How could
+1. What is the default geom associated with `stat_summary()`? How could
     you rewrite the previous plot to use that geom function instead of
     the stat function?
 
@@ -1009,67 +996,38 @@ function, so you can get help in the usual way, e.g., `?stat_bin`.
 
 ```
 
-2.  
-
-    a.  What does `geom_col()` do? How is it different from
-        `geom_bar()`?
+2. 
+    a) What does `geom_col()` do? How is it different from `geom_bar()`?
 
 **Ans-2.5.1.1:**
 
-b.  Plot mpg and count the classes in drv. Compare `geom_bar` to
+2. 
+    b) Plot mpg and count the classes in drv. Compare `geom_bar` to
     `geom_col`.
 
 **Ans-2.5.1.2b:**
 
 ```{r Ans-2.5.1.2b}
-#| fig-width: 5
-
-ggplot(mpg) + geom_bar(aes(fill = drv,x = class))
-
-# OR
-
-ggplot(mpg) + geom_bar(aes(fill = drv,x = class),position="dodge")
-
-
-# `geom_col`
-
-mpg %>%
-group_by(class, .drop = FALSE) %>%  add_tally() %>% 
-  ungroup()  %>% 
-  ggplot(aes(fill = drv, x = class, y = n)) +
-  geom_col()
 
 
 ```
 
-3.  Most geoms and stats come in pairs that are almost always used in
-    concert. Make a list of all the pairs. What do they have in common?
-    (Hint: Read through the documentation.). Write the stat used for
-    `geom_bar()`,`geom_smooth()` and `geom_boxplot()`.
+3. Most geoms and stats come in pairs that are almost always used in concert. Make a list of all the pairs. What do they have in common? (Hint: Read through the documentation.). Write the stat used for `geom_bar()`,`geom_smooth()` and `geom_boxplot()`.
 
 **Ans-2.5.1.3:**
 
-4.  What variables does `stat_smooth()` compute? What arguments control
-    its behavior?
+4. What variables does `stat_smooth()` compute? What arguments control its behavior?
 
 **Ans-2.5.1.4:**
 
-5.  
-
-    a.  In our proportion bar chart, we needed to set `group = 1`. Why?
-        In other words, what is the problem with these two graphs?
-        Replot the two plots below using `group = 1`.
+5. 
+    a) In our proportion bar chart, we needed to set `group = 1`. Why? In other words, what is the problem with this graph? Replot using a `group` variable so that it plots correctly.
 
 ```{r}
 #| fig-show: hide
 
 ggplot(diamonds, aes(
   x = cut, y = after_stat(prop)
-  )) +
-  geom_bar()
-
-ggplot(diamonds, aes(
-  x = cut, fill = color, y = after_stat(prop)
   )) + 
   geom_bar()
 
@@ -1078,10 +1036,16 @@ ggplot(diamonds, aes(
 
 **Ans-2.5.1.5a:**
 
-b.  Replot the two plots below without using `group = 1` and use
-    'after_stat(count)' to calculate proportions instead of
-    \`after_stat(prop)'. Label the y-axis using percentages. Hint: check
-    out the scales package that we loaded.
+5. 
+    b)  Replot the plot below without using a `group` aesthetic. Instead of using `after_stat(prop)` to calculate proportions use `after_stat(count)`. Label the y-axis using percentages. Hint: check out the scales package that we loaded.
+
+```{r}
+ggplot(diamonds, aes(
+  x = cut, fill = color, y = after_stat(prop)
+  )) + 
+  geom_bar()
+```
+
 
 **Ans-2.5.1.5b:**
 
@@ -1244,8 +1208,7 @@ associated with each adjustment: `?position_dodge`, `?position_fill`,
 
 ### 2.6.1 Exercises {.unnumbered}
 
-1.  What is the problem with the following plot? How could you improve
-    it?
+1. What is the problem with the following plot? How could you improve it?
 
 ```{r}
 #| fig-show: hide
@@ -1256,7 +1219,7 @@ ggplot(mpg, aes(x = cty, y = hwy)) +
 
 **Ans-2.6.1.1:**
 
-2.  What, if anything, is the difference between these two plots? Why?
+2. What, if anything, is the difference between these two plots? Why?
 
 ```{r}
 #| fig-show: hide
@@ -1270,7 +1233,7 @@ ggplot(mpg, aes(x = displ, y = hwy)) +
 
 **Ans-2.6.1.2:**
 
-3.  What parameters to `geom_jitter()` control the amount of jittering?
+3. What parameters to `geom_jitter()` control the amount of jittering?
     Add jittering to the following plot:
 
 ```{r}
@@ -1286,7 +1249,7 @@ ggplot(mpg, aes(x = displ, y = hwy)) +
 
 ```
 
-4.  Compare and contrast `geom_jitter()` with `geom_count()` using the
+4. Compare and contrast `geom_jitter()` with `geom_count()` using the
     following ggplot.
 
 ```{r}
@@ -1301,7 +1264,7 @@ g <- ggplot(mpg, aes(x = displ, y = hwy))
 
 ```
 
-5.  What's the default position adjustment for `geom_boxplot()`? Create
+5. What's the default position adjustment for `geom_boxplot()`? Create
     a visualization of the `mpg` dataset that demonstrates it by adding
     the default position using the following ggplot:
 
