--- a/lessons/02-layers.Rmd
+++ b/lessons/02-layers.Rmd
@@ -49,11 +49,11 @@ The `mpg` data frame is bundled with the ggplot2 package and contains
 models.
 
 ```{r include = F}
-
 ?mpg
-
+?mpg
+?mpg
 nrow(mpg)
-
+?mpg
 sapply(mpg,class)
 ```
 
