--- a/index.Rmd
+++ b/index.Rmd
@@ -1,13 +1,16 @@
---- 
+---
 title: "r4ds-ggplot2" 
-knit: "bookdown::render_book"
-output:
-  bookdown::gitbook: 
-      number_sections: true
 date: "`r Sys.Date()`" 
+output:
+  bookdown::gitbook:
+    css: [css/git.css, css/toc.css]
+    config:
+      toc:
+        collapse: section
+      download: ["pdf", "epub"]
 link-citations: yes 
-github-repo: gurinina/r4ds-ggplot2 
-url: https\://bookdown.org/ggiaever/r4ds-ggplot2 
+github-repo: "gurinina/r4ds-ggplot2" 
+url: 'https://bookdown.org/ggiaever/r4ds-ggplot2'
 site: bookdown::bookdown_site 
 documentclass: book
 cover-image: "images/koos10.png"
@@ -15,6 +18,11 @@ cover-image: "images/koos10.png"
 
 # R for data science workshop {-}
 
+<p align="center">
+  <img src="images/koosggplot.png" alt="Welcome to Omics Science!" width="600" />
+</p>
+
 This website us the ggplot visulization sections of Hadley Wickham's book [2nd edition of "R for Data Science"](https://r4ds.hadley.nz/).
 
-![](images/koos10.png)
+
+The published version for this module can be found on my bookdown site [r4ds-ggplot2](https://bookdown.org/ggiaever/r4ds-ggplot2).
