--- a/index.Rmd
+++ b/index.Rmd
@@ -14,6 +14,10 @@ site: bookdown::bookdown_site
 documentclass: book
 cover-image: "images/koosggplot.png"
 ---
+```{r, include=FALSE}
+source("_common.R")
+```
+
 
 # R for data science workshop {-}
 
@@ -21,7 +25,9 @@ cover-image: "images/koosggplot.png"
   <img src="images/koosggplot.png" alt="Welcome to Omics Science!" width="300" />
 </p>
 
-This website us the ggplot visulization sections of Hadley Wickham's book [2nd edition of "R for Data Science"](https://r4ds.hadley.nz/).
+
+The published version for this module can be found on my bookdown site [2024_r4ds-ggplot2](https://bookdown.org/ggiaever/2024_r4ds-ggplot2).
+
+This is a workshop based on the ggplot visulization sections of Hadley Wickham's book [2nd edition of "R for Data Science"](https://r4ds.hadley.nz/)(see README.md)
 
 
-The published version for this module can be found on my bookdown site [r4ds-ggplot2](https://bookdown.org/ggiaever/r4ds-ggplot2).
